Added the operation to send payment outcome to Nodo.
